// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should change acitve item by btn click trigger 1`] = `
"<div><button></button>
  <div class=\\"er-steps vertical medium\\">
    <div class=\\"er-steps-item active\\">
      <div class=\\"step\\"><span>0</span></div>
      <div class=\\"vertical-main\\">
        <div class=\\"title\\"></div>
        <div class=\\"desc\\"></div>
      </div>
    </div>
    <div class=\\"er-steps-item active\\">
      <div class=\\"step\\"><span>0</span></div>
      <div class=\\"vertical-main\\">
        <div class=\\"title\\"></div>
        <div class=\\"desc\\"></div>
      </div>
    </div>
    <div class=\\"er-steps-item active\\">
      <div class=\\"step\\"><span>0</span></div>
      <div class=\\"vertical-main\\">
        <div class=\\"title\\"></div>
        <div class=\\"desc\\"></div>
      </div>
    </div>
    <div class=\\"er-steps-item active\\">
      <div class=\\"step\\"><span>0</span></div>
      <div class=\\"vertical-main\\">
        <div class=\\"title\\"></div>
        <div class=\\"desc\\"></div>
      </div>
    </div>
    <div class=\\"er-steps-item active\\">
      <div class=\\"step\\"><span>0</span></div>
      <div class=\\"vertical-main\\">
        <div class=\\"title\\"></div>
        <div class=\\"desc\\"></div>
      </div>
    </div>
    <div class=\\"er-steps-item active\\">
      <div class=\\"step\\"><span>0</span></div>
      <div class=\\"vertical-main\\">
        <div class=\\"title\\"></div>
        <div class=\\"desc\\"></div>
      </div>
    </div>
    <div class=\\"er-steps-item active\\">
      <div class=\\"step\\"><span>0</span></div>
      <div class=\\"vertical-main\\">
        <div class=\\"title\\"></div>
        <div class=\\"desc\\"></div>
      </div>
    </div>
    <div class=\\"er-steps-item active\\">
      <div class=\\"step\\"><span>0</span></div>
      <div class=\\"vertical-main\\">
        <div class=\\"title\\"></div>
        <div class=\\"desc\\"></div>
      </div>
    </div>
    <div class=\\"er-steps-item active\\">
      <div class=\\"step\\"><span>0</span></div>
      <div class=\\"vertical-main\\">
        <div class=\\"title\\"></div>
        <div class=\\"desc\\"></div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`should render  Step with different size 1`] = `
"<div>
  <div class=\\"er-steps medium\\">
    <div class=\\"er-steps-item active\\">
      <div class=\\"step\\"><span>0</span></div>
      <div class=\\"title\\"></div>
      <div class=\\"desc\\"></div>
    </div>
    <div class=\\"er-steps-item active\\">
      <div class=\\"step\\"><span>0</span></div>
      <div class=\\"title\\"></div>
      <div class=\\"desc\\"></div>
    </div>
    <div class=\\"er-steps-item active\\">
      <div class=\\"step\\"><span>0</span></div>
      <div class=\\"title\\"></div>
      <div class=\\"desc\\"></div>
    </div>
  </div>
  <div class=\\"er-steps mini\\">
    <div class=\\"er-steps-item active\\">
      <div class=\\"step\\"><span>0</span></div>
      <div class=\\"title\\"></div>
      <div class=\\"desc\\"></div>
    </div>
    <div class=\\"er-steps-item active\\">
      <div class=\\"step\\"><span>0</span></div>
      <div class=\\"title\\"></div>
      <div class=\\"desc\\"></div>
    </div>
    <div class=\\"er-steps-item active\\">
      <div class=\\"step\\"><span>0</span></div>
      <div class=\\"title\\"></div>
      <div class=\\"desc\\"></div>
    </div>
  </div>
  <div class=\\"er-steps small\\">
    <div class=\\"er-steps-item active\\">
      <div class=\\"step\\"><span>0</span></div>
      <div class=\\"title\\"></div>
      <div class=\\"desc\\"></div>
    </div>
    <div class=\\"er-steps-item active\\">
      <div class=\\"step\\"><span>0</span></div>
      <div class=\\"title\\"></div>
      <div class=\\"desc\\"></div>
    </div>
    <div class=\\"er-steps-item active\\">
      <div class=\\"step\\"><span>0</span></div>
      <div class=\\"title\\"></div>
      <div class=\\"desc\\"></div>
    </div>
  </div>
</div>"
`;

exports[`should render  Step with title and desc 1`] = `
"<div class=\\"er-steps medium\\">
  <div class=\\"er-steps-item active\\">
    <div class=\\"step\\"><span>0</span></div>
    <div class=\\"title\\">开始</div>
    <div class=\\"desc\\">2023-09-28 10:23:45</div>
  </div>
  <div class=\\"er-steps-item active\\">
    <div class=\\"step\\"><span>0</span></div>
    <div class=\\"title\\">中间</div>
    <div class=\\"desc\\">2023-09-28 10:25:46</div>
  </div>
  <div class=\\"er-steps-item active\\">
    <div class=\\"step\\"><span>0</span></div>
    <div class=\\"title\\">结束</div>
    <div class=\\"desc\\">2023-09-28 10:26:03</div>
  </div>
</div>"
`;

exports[`should render Step with active first one item 1`] = `
"<div class=\\"er-steps medium\\">
  <div class=\\"er-steps-item active\\">
    <div class=\\"step\\"><span>0</span></div>
    <div class=\\"title\\"></div>
    <div class=\\"desc\\"></div>
  </div>
  <div class=\\"er-steps-item active\\">
    <div class=\\"step\\"><span>0</span></div>
    <div class=\\"title\\"></div>
    <div class=\\"desc\\"></div>
  </div>
  <div class=\\"er-steps-item active\\">
    <div class=\\"step\\"><span>0</span></div>
    <div class=\\"title\\"></div>
    <div class=\\"desc\\"></div>
  </div>
</div>"
`;

exports[`should render Step with vertical mode 1`] = `
"<div class=\\"er-steps vertical medium\\">
  <div class=\\"er-steps-item active\\">
    <div class=\\"step\\"><span>0</span></div>
    <div class=\\"vertical-main\\">
      <div class=\\"title\\"></div>
      <div class=\\"desc\\"></div>
    </div>
  </div>
  <div class=\\"er-steps-item active\\">
    <div class=\\"step\\"><span>0</span></div>
    <div class=\\"vertical-main\\">
      <div class=\\"title\\"></div>
      <div class=\\"desc\\"></div>
    </div>
  </div>
  <div class=\\"er-steps-item active\\">
    <div class=\\"step\\"><span>0</span></div>
    <div class=\\"vertical-main\\">
      <div class=\\"title\\"></div>
      <div class=\\"desc\\"></div>
    </div>
  </div>
</div>"
`;

exports[`should render default Step 1`] = `
"<div class=\\"er-steps medium\\">
  <div class=\\"er-steps-item active\\">
    <div class=\\"step\\"><span>0</span></div>
    <div class=\\"title\\"></div>
    <div class=\\"desc\\"></div>
  </div>
  <div class=\\"er-steps-item active\\">
    <div class=\\"step\\"><span>0</span></div>
    <div class=\\"title\\"></div>
    <div class=\\"desc\\"></div>
  </div>
  <div class=\\"er-steps-item active\\">
    <div class=\\"step\\"><span>0</span></div>
    <div class=\\"title\\"></div>
    <div class=\\"desc\\"></div>
  </div>
</div>"
`;
